--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,11 +1,11 @@
 [tool.poetry]
-name = "connectfour-rl-dqn"
+name = "connectfour"
 version = "0.1.0"
 description = "This repository implements a reinforcement learning solution for the Connect Four game, demonstrating the transition from simple to complex game AI."
 authors = ["Patrick Kalkman <patrick@simpletechture.nl>"]
+packages = [{include = "connectfour"}]
 license = "MIT"
 readme = "README.md"
-package-mode = false
 
 [tool.poetry.dependencies]
 python = "^3.12"
@@ -13,6 +13,8 @@ pettingzoo = "1.24.3"
 pygame = "2.6.1"
 numpy = "2.1.3"
 torch = "2.5.1"
+matplotlib = "^3.9.2"
+seaborn = "^0.13.2"
 
 [tool.poetry.group.dev.dependencies]
 pytest = "^7.4.3"
